2005-10-29  Mark Kettenis  <kettenis@gnu.org>

	* inf-ttrace.c (inf_ttrace_wait): Comment out TARGET_WAITKIND_EXEC
	code; return TARGET_WAITKIND_STOPPED instead.

2005-10-28  Mark Kettenis  <kettenis@gnu.org>

	* ppc-tdep.h (PPC_INSN_SIZE): Define.

	* inf-ttrace.c (inf_ttrace_mourn_inferior): Remove redundant cast.
	(inf_ttrace_kill): Renamed from inf_ttrace_kill_inferior.
	(inf_ttrace_target): Resort assignments.

2005-10-28  Nick Roberts  <nickrob@snap.net.nz>

	* mi/gdb-mi.el: Sync with Emacs 22.0.50.

2005-10-25  Andreas Schwab  <schwab@suse.de>

	* regformats/reg-ia64.dat: Remove NAT registers.

2005-10-20  Mark Kettenis  <kettenis@gnu.org>

	* rs6000-tdep.c (info_powerpc_cmdlist): Remove variable.
	(rs6000_info_powerpc_command): Remove function.

2005-10-21  Andreas Schwab  <schwab@suse.de>

	* dwarf2read.c (isreg): Removed.
	(decode_locdesc): Don't set it.

2005-10-20  Joel Brobecker  <brobecker@adacore.com>

	* Makefile.in (YYFILES): Add ada-lex.c

2005-10-17  Jim Blandy  <jimb@redhat.com>

	* dwarf2expr.c (dwarf_expr_fetch): Use correct comparison to
	detect stack underflow.

2005-10-14  Paul Gilliam  <pgilliam@us.ibm.com>

        * rs6000-tdep.c (rs6000_register_reggroup_p): Add vscr to test for
        vector registers.

2005-10-13  Andreas Schwab  <schwab@suse.de>

	* Makefile.in (linux-thread-db.o): Depend on $(gdbcore_h).

	* linux-thread-db.c (enable_thread_event): Extend pointer value as
	specified by target.
	(thread_db_get_thread_local_address): Likewise.

2005-10-09  Joel Brobecker  <brobecker@adacore.com>

	* i386-tdep.c (i386_reg_struct_return_p): Allow array types as well.
	(i386_return_value): Add handling for functions that return array
	types.

2005-10-09  Joel Brobecker  <brobecker@adacore.com>

	* ada-valprint.c (print_optional_low_bound): Handle properly
	cases where the array index type is a TYPE_CODE_RANGE.

2005-10-09  Joel Brobecker  <brobecker@adacore.com>

	* valprint.c (val_print_array_elements): Check array size before